2003-01-05  Jens Finke  <jens@triq.net>

	* src/apotheke-directory.c (get_file_icon): Removed.

	* src/apotheke-directory.h: Removed AD_COL_FILEICON. This is now
	completely handled by the view. Added FILE_STATUS_LAST dummy
	entry.

	* src/apotheke-view.c (load_icons): New function.
	(apotheke_view_instance_init): Load file icons.
	(apotheke_view_destroy): Free icons.
	(get_row_icon): New function.
	(set_up_tree_view): Call get_row_icon to determine the file icon
	for an entry.

2003-01-05  Jens Finke  <jens@triq.net>

	* src/apotheke-directory.c (apotheke_sort_func_name),
	(apotheke_sort_func_string),
	(apotheke_sort_func_name): New functions. Rows get sorted by name
	as a backup case, when eg. the status is the same.

2002-12-31  Jens Finke  <jens@triq.net>

	* src/apotheke-view.c (get_last_changelog_entry): Reworked.
	(verb_CVS_commit_cb): Try to init the commit message with the last
	ChangeLog entry found.

2002-12-30  Jens Finke  <jens@triq.net>

	* src/apotheke-directory.[ch]
	(apotheke_directory_block_monitor_handler),
	(apotheke_directory_unblock_monitor_handler): New methods.

	* src/apotheke-view.c (execute_cvs_command): Block all file
	monitoring handler and update the file list after cvs command
	completion.
	
2002-12-30  Jens Finke  <jens@triq.net>

	Implemented file monitoring and status updates for files which are
	modified by external programs.

	* src/apotheke-directory.c (apotheke_directory_dispose): Free
	monitor handles.
	(change_entry_status),
	(get_iter_by_filename),
	(dir_monitor_callback),
	(entries_monitor_callback), 
	(add_monitors): New functions.

2002-12-30  Jens Finke  <jens@triq.net>

	* src/apotheke-cvs-entries.c (apotheke_cvs_entries_get_entries):
	Overread lines in CVS/Entries with only a 'D'.
	
2002-12-27  Jens Finke  <jens@triq.net>

     	* configure.in: Removed GNOME_COMPILE_WARNINGS.

	* src/Makefile.am: Fixed handling of server.in.in file.

2002-11-28  Jens Finke  <jens@triq.net>
