@@ -18,7 +18,6 @@ enum {
 	AD_COL_FILENAME,
 	AD_COL_VERSION,
 	AD_COL_STATUS,
-	AD_COL_STATUS_STR,
 	AD_COL_ATTRIBUTES,
 	AD_COL_TAG,
 	AD_COL_DATE,
